--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,16 +3,13 @@
     --color-light_grayish_orange: #ece7e4;
     --color-very_dark_grayish_orange: #645c55;
     --color-very_very_dark_grayish_orange:#403e3b;
+    --color-grayish-orange:#cec4bc;
+
 }
 
 body{
     margin: 0;
     padding: 0;
-}
-
-* {
-    margin: inherit;
-    padding: inherit;
 }
 
 .text{
@@ -66,11 +63,9 @@ body{
 .hero-container{
     display: flex;
     justify-content: space-between;
-}
-
-.hero-container{
     height: 720px;
     background-color: var(--color-light_grayish_orange);
+    margin-bottom: 100px;
 }
 
 .hero-banner{
@@ -87,6 +82,7 @@ body{
     color: var(--color-very_dark_grayish_orange);
     text-transform: uppercase;
     padding-bottom: 20px;
+    margin: 0;
 }
 
 .hero_title{
@@ -94,6 +90,7 @@ body{
     line-height: 70px;
     color: var(--color-black);
     padding-bottom: 18px;
+    margin: 0;
 }
 
 .hero_text{
@@ -101,6 +98,7 @@ body{
     font-size: 16px;
     line-height: 24px;
     padding-bottom: 30px;
+    margin: 0;
 }
 
 .btn_hero{
@@ -109,4 +107,71 @@ body{
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.4px;
+    margin: 0;
+}
+
+.our-firm-container, .our-firm-title, .our-firm-text, .our-firm-author, .our-firm-author_name{
+    display: flex;
+}
+
+.our-firm-container {
+    gap: 133px;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.our-firm-title {
+    font-size: 32px;
+    line-height: 38px;
+
+    padding: 0;
+    margin: 0;
+}
+
+.our-firm-text {
+    flex-direction: column;
+    gap: 10px;
+    width: 500px;
+
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.our-firm-text > p{
+    margin: 0;
+    color: var(--color-very_very_dark_grayish_orange);
+}
+
+.avatar{
+    width: 84px;
+    height: 84px;
+    border-radius: 64px;
+    border: 3px solid var(--color-grayish-orange);
+    margin-right: 30px;
+}
+
+.our-firm-author_name{
+    flex-direction: column;
+    justify-content: center;
+}
+
+.our-firm-author_name > p{
+    margin: 0;
+    padding: 0;
+}
+
+.author_name{
+    font-size: 17px;
+    line-height: 26px;
+    color: var(--color-black);
+}
+
+.author_job{
+    font-size: 14px;
+    line-height: 14px;
+    color: var(--color-very_dark_grayish_orange);
+}
+
+.second_hero-banner_img{
+    height: 600px;
 }
