--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,8 @@
 }
 
 body{
-    margin: 0;
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -30,7 +31,8 @@ body{
 
 .head_container{
     height: 90px;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    
 }
 
 .navmenu_group{
@@ -172,6 +174,140 @@ body{
     color: var(--color-very_dark_grayish_orange);
 }
 
-.second_hero-banner_img{
-    height: 600px;
+.second_hero-banner-container, .third_hero-banner-container {
+    position: relative;
+    width: 100%;
+
+    margin-bottom: 100px;
 }
+
+.wide_hero-banner_img{
+    display: block;
+    height: 600px;
+    width: 1440px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.hero-banner-overlay{
+    position: absolute;
+    top: 40%;
+    right: 60px;
+    padding: 20px;
+}
+
+.hero-banner_title-text{
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    color: var(--color-very_very_dark_grayish_orange);
+    margin: 0;
+}
+
+.hero-banner_text{
+    font-size: 16px;
+    line-height: 24px;
+    width: 385px;
+    color: var(--color-very_dark_grayish_orange);
+    margin: 0;
+}
+
+.our_process-text {
+    font-size: 14px;
+    text-transform: uppercase;
+    line-height: 20px;
+    letter-spacing: 2px;
+    color: var(--color-very_dark_grayish_orange);
+    margin: 0;
+    margin-bottom: 13px;
+    padding: 0;
+}
+.our_process-title {
+    font-size: 39px;
+    line-height: 42px;
+    color: var(--color-black);
+    margin: 0;
+    margin-bottom: 47px;
+    padding: 0;
+}
+.how-do-block, .how-do-point {
+    display: flex;
+}
+
+.how-do-block{
+    justify-content: space-around;
+}
+
+.how-do-point {
+    flex-direction: column;
+    align-items: center;
+    width: 259px;
+    height: 379px;
+    text-align: center;
+}
+.how-do-point_icon{
+    width: 117px;
+    height: 102px;
+    margin-bottom: 15px;
+}
+
+.how-do-title {
+    font-size: 17px;
+    line-height: 26px;
+    color: var(--color-very_very_dark_grayish_orange);
+    margin: 0;
+    margin-bottom: 10px;
+}
+.how-do-text {
+    font-size: 15px;
+    line-height: 24px;
+    margin: 0;
+    color: var(--color-very_dark_grayish_orange);
+}
+
+.third_hero-banner-container {
+    margin-bottom: 0;
+}
+
+.prior_clients-container{
+    display: flex;
+    justify-content: space-between;
+    height: 410px;
+    background-color: var(--color-very_very_dark_grayish_orange);
+}
+
+.prior_clients-text_block{
+    width: 460px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.prior_clients-subtitle{
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    color: var(--color-very_dark_grayish_orange);
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    margin: 0;
+}
+
+.prior_clients-title{
+    font-size: 64px;
+    line-height: 70px;
+    color: var(--color-black);
+    padding-bottom: 18px;
+    margin: 0;
+}
+
+.prior_clients-text{
+    color: var(--color-very_very_dark_grayish_orange);
+    font-size: 16px;
+    line-height: 24px;
+    padding-bottom: 30px;
+    margin: 0;
+}
+
